--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,22 +1,24 @@
 .images{
     display: flex;gap: 10px;
+    margin-top: 20px;
 }
 body>img{
     padding-left: 47%;
-    width: 5%;
+    width: 7%;
 }
 .images1{
     display: flex;gap: 10px;
+    margin-top: 30px;
 }
 .nav{
     display: flex;
     justify-content: space-around;
 }
 .images img{
-    width: 300px;
+    width: 290px;
 }
 .images1 img{
-    width: 300px;
+    width: 290px;
 }
 h1{
     text-align: center;
@@ -24,7 +26,7 @@ h1{
 h3{
     text-align: center;
     font-size: 25px;
-    color: green;
+    color: rgb(239, 39, 12);
 }
 .box{
     display: flex;
@@ -45,4 +47,43 @@ p{
 #category{
     width: 30px;
 }
+.cont{
+    width: 95%;
+    display: flex;
+    margin: auto;
+    margin-left: 60px;
+}
+.mid img{
+    width: 60%;
+    border-radius: 44px;
+}
+.mid{
+   margin-top: 20px;
+}
+.mid p{
+    margin-left: 20px;
+    color: black;
+    font-size: 12px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+button{
+    font-size: 15px;
+    height: 80px;
+    margin-right: 20px;
+}
+.grocerry h3{
+color: black;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.images1 h3{
+color: black;
+font-size: 19px;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.grocerry{
+    padding-top: 30px;
+}
+.jwellery{
+    margin-top: 10px;
 
+}
