--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,11 +1,13 @@
 .formbox{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     width: 30%;margin: auto;
     margin-top: 200px;
-    background-color: aqua;
+    /* background-color: aqua; */
+    background: rgb(191, 226, 231);
+    text-align: center;
 }
 .formbox h1{
-    color: blue;
+    color: rgb(218, 23, 23);
     font-size: 40px;
 }
 .input-field{
@@ -38,5 +40,10 @@ form p{
     font-size: 20px;
 }
 body{
-    background-color: rgb(148, 148, 233);
+    background-image: url("https://png.pngtree.com/background/20210710/original/pngtree-small-fresh-and-elegant-flowers-and-plants-border-h5-background-material-picture-image_1029591.jpg");
+}
+a{
+    color: rgb(11, 92, 22);
+    text-decoration: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
