--- a/CSS/home.css
+++ b/CSS/home.css
@@ -14,6 +14,10 @@ body>img{
     display: flex;
     justify-content: space-around;
 }
+.nav a:hover{
+    color: rgb(245, 10, 10);
+    transform: scale(1.1);
+}
 .images img{
     width: 275px;
 }
@@ -51,14 +55,19 @@ p{
     width: 30px;
 }
 .cont{
-    width: 95%;
+    /* width: 95%; */
     display: flex;
-    margin: auto;
-    margin-left: 60px;
+    /* margin: auto; */
+    /* margin-left: 60px; */
+    overflow: auto;
+    white-space: nowrap;
+    gap: 20px;
+    margin-bottom: 8px;
+   
 }
 .mid img{
-    width: 60%;
-    border-radius: 44px;
+    width: 80px;
+    border-radius: 50px;
 }
 .mid{
    margin-top: 20px;
@@ -69,6 +78,15 @@ p{
     font-size: 12px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+.mid p:hover{
+     color: blue;
+     transform: scale(1.1);
+     cursor: pointer;
+}
+.mid img:hover{
+    transform: scale(1.08);
+}
+
 button{
     font-size: 15px;
     height: 80px;
@@ -109,5 +127,13 @@ a{
 }
 .images img {
     margin-bottom: 25px;
+}
+.images a:hover{
+    color: darkcyan;
+    transform: scale(1.2);
+}
+.images1 a:hover{
+    color: rgb(197, 10, 79);
+    transform: scale(1.2);
 }
 
