--- a/CSS/home.css
+++ b/CSS/home.css
@@ -4,7 +4,15 @@
 }
 body>img{
     padding-left: 47%;
-    width: 7%;
+    width: 9%;
+}
+body>img:hover{
+    transform:scale(1.1);
+}
+body>h3:hover{
+     transform: scale(1.2);
+     color: deeppink;
+     cursor: pointer;;
 }
 .images1{
     display: flex;gap: 25px;
@@ -13,6 +21,9 @@ body>img{
 .nav{
     display: flex;
     justify-content: space-around;
+    /* border: 1px solid rgb(17, 17, 240); */
+    padding: 10px 10px 10px 10px ;
+    background-color: rgb(248, 220, 184);
 }
 .nav a:hover{
     color: rgb(245, 10, 10);
@@ -67,7 +78,7 @@ p{
 }
 .mid img{
     width: 80px;
-    border-radius: 50px;
+    border-radius: 45px;
 }
 .mid{
    margin-top: 20px;
