--- a/CSS/login.css
+++ b/CSS/login.css
@@ -3,15 +3,16 @@
     width: 30%;margin: auto;
     margin-top: 200px;
     /* background-color: aqua; */
-    background: rgb(207, 229, 233);
+    background: rgb(230, 239, 241);
     text-align: center;
+    border-radius: 10px;
 }
 .formbox h1{
     color: rgb(218, 23, 23);
     font-size: 40px;
 }
 .input-field{
-       margin: 15px 0;
+       margin: 10px 10px;
        border-radius: 3px;
        display: flex;
        align-items: center;
@@ -23,7 +24,7 @@ input{
     width: 90%;
 }
 form p{
-    text-align: left;
+    text-align: center;
     font-size: 10px;
 }
 .but-fld{
@@ -38,9 +39,10 @@ form p{
     cursor: pointer;
     color: white;
     font-size: 20px;
+    margin-bottom: 10px;
 }
 body{
-    background-image: url("https://png.pngtree.com/background/20210710/original/pngtree-small-fresh-and-elegant-flowers-and-plants-border-h5-background-material-picture-image_1029591.jpg");
+    background-image: url("https://images.pexels.com/photos/129731/pexels-photo-129731.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
 }
 a{
     color: rgb(11, 92, 22);
